--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos"></ul>
-        <li>Home</li>
-        <li>Galeria</li>
-        <li>Pesquisar</li>
+        <li class= "botao">Home</li>
+        <li class= "botao"> Galeria</li>
+        <li class="botao"> Pesquisar</li>
   <h1 class="titulo" >Escravidão</h1>  
+    </div>
+    <div class="texto">
+<h2 class="subtitulo">Um pouco da escravidao</h2>
+<p class="teexto-inicial">É considerado escravidão o regime de trabalho no qual homens e mulheres são considerados propriedades de seus senhores, podendo ser vendidas ou trocadas como mercadorias.
+
+    As pessoas escravizadas têm suas liberdades tolhidas, além de forçadas a executar tarefas sem receber qualquer tipo de remuneração.
+    
+    Esse tipo de mão de obra foi muito empregada no Brasil, mas também em diversas partes do mundo durante períodos distintos.
+    
+    Atualmente, o regime escravista é ilegal, entretanto, ainda existem muitos trabalhadores e trabalhadoras que vivem em condições semelhantes à escravidão.</p>
+    <p class="texto-fonte">Fonte: Toda Matematica</p>
     </div>
 </body>
 </html>
