--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos"></ul>
-        <li class= "botao">Home</li>
-        <li class= "botao"> Galeria</li>
-        <li class="botao"> Pesquisar</li>
+        <a href="#"><li class="botao">Home</li></a>
+        <a href="galeria.html"><li class="botao">Galeria</li></a>
+        <li class="botao">Explorar</li>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
     <div class="texto">
