--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul class="topicos"></ul>
         <a href="#"><li class="botao">Home</li></a>
         <a href="galeria.html"><li class="botao">Galeria</li></a>
-        <li class="botao">Explorar</li>
+        <a href="explorar.html"><li class="botao">Explorar</li></a>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
     <div class="texto">
