--- a/explorar.html
+++ b/explorar.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 class="titulo">Escolha oque voce quer aprender hoje?</h1>
+    <div class="primeiro aprendizado">
+        <h2 class="subtitulo">Sou contra</h2>
+        <img class="foto" src="./img/52045523540_d3304b3c0f_o.jpg">
+        <p class="texto">Sobre escravo</p>
+    </div>
 </body>
 </html>
