--- a/explorar.html
+++ b/explorar.html
@@ -11,7 +11,7 @@
     <div class="primeiro aprendizado">
         <h2 class="subtitulo">Sou contra</h2>
         <img class="foto" src="./img/52045523540_d3304b3c0f_o.jpg">
-        <p class="texto">Contra Escravidão</p>
+        <p class="texto"> Somos Contra Escravidão</p>
     </div>
 </body>
 </html>
