--- a/explorar.html
+++ b/explorar.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">Escolha oque voce quer aprender hoje?</h1>
+    <h1 class="titulo">Sobre oque você quer saber hoje?</h1>
     <div class="primeiro aprendizado">
         <h2 class="subtitulo">Sou contra</h2>
         <img class="foto" src="./img/52045523540_d3304b3c0f_o.jpg">
