--- a/explorar.html
+++ b/explorar.html
@@ -10,7 +10,7 @@
     <h1 class="titulo">Sobre oque você quer saber hoje?</h1>
     <div class="primeiro aprendizado">
         <h2 class="subtitulo">Sou contra</h2>
-        <img class="foto" src="./img/image copy 2.png">
+        <img class="foto" src="./img/image copy.png">
         <p class="texto"> Somos Contra Escravidão</p>
     </div>
 </body>
