--- a/explorar.html
+++ b/explorar.html
@@ -9,9 +9,16 @@
 <body>
     <h1 class="titulo">Sobre oque você quer saber hoje?</h1>
     <div class="primeiro aprendizado">
-        <h2 class="subtitulo">Sou contra</h2>
+        <h2 class="subtitulo">Vai tomar chicotada</h2>
         <img class="foto" src="./img/image copy.png">
         <p class="texto"> Somos Contra Escravidão</p>
     </div>
+    <body>
+        <h1 class="titulo">Escolha sua senzala</h1>
+        <div class="primeiro aprendizado">
+            <h2 class="subtitulo">Sou contra</h2>
+            <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
+            <p class="texto"> Somos Contra Escravos</p>
+        </div>
 </body>
 </html>
