--- a/explorar.html
+++ b/explorar.html
@@ -18,7 +18,7 @@
         <div class="primeiro aprendizado">
             <h2 class="subtitulo">Sou contra</h2>
             <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
-            <p class="texto"> Somos Contra Escravos</p>
+            <p class="texto"> Somos Contra Escravos respeitamos os decendentes da famila do gabriel man</p>
         </div>
 </body>
 </html>
