--- a/explorar.html
+++ b/explorar.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">Sobre oque você quer saber hoje?</h1>
+    <h1 class="titulo">Sobre oque você quer saber hoje?hh</h1>
     <div class="primeiro aprendizado">
-        <h2 class="subtitulo">Vai tomar chicotada</h2>
+        <h2 class="subtitulo">Trabalhe ou vai levar chicotada</h2>
         <img class="foto" src="./img/image copy.png">
         <p class="texto"> Somos Contra Escravidão</p>
     </div>
@@ -18,7 +18,7 @@
         <div class="primeiro aprendizado">
             <h2 class="subtitulo">Sou contra</h2>
             <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
-            <p class="texto"> Somos Contra Escravos respeitamos os decendentes da famila do gabriel man</p>
+            <p class="texto"> Somos Contra </p>
         </div>
 </body>
 </html>
