--- a/explorar.html
+++ b/explorar.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">Sobre oque você quer saber hoje?hh</h1>
+    <h1 class="titulo">Sobre oque você quer saber sobre a escravidão</h1>
     <div class="primeiro aprendizado">
-        <h2 class="subtitulo">Trabalhe ou vai levar chicotada</h2>
+        <h2 class="subtitulo">Trabalho forçado</h2>
         <img class="foto" src="./img/image copy.png">
-        <p class="texto"> Somos Contra Escravidão</p>
+        <p class="texto"> Somos Contra a Escravidão</p>
     </div>
     <body>
-        <h1 class="titulo">Escolha sua senzala</h1>
+        <h1 class="titulo">Familias escravizadas</h1>
         <div class="primeiro aprendizado">
-            <h2 class="subtitulo">Sou contra</h2>
+            <h2 class="subtitulo">Algumas imagens </h2>
             <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
             <p class="texto"> Somos Contra </p>
         </div>
