--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="cabecalho">
-        <ul class="topicos"></ul>
-        <a href="#"><li class="botao">Home</li></a>
-        <a href="galeria.html"><li class="botao">Galeria</li></a>
-        <a href="explorar.html"><li class="botao">Explorar</li></a>
+        <ul class="topicos">
+            <li class="botao"><a href="#">Home</a></li>
+            <li class="botao"><a href="galeria.html"></a></li>
+            <li class="botao"><a href="explorar.html"></a></li>
+        </ul>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
     <div class="texto">
