--- a/explorar.html
+++ b/explorar.html
@@ -18,7 +18,7 @@
         <div class="primeiro aprendizado">
             <h2 class="subtitulo">Algumas imagens </h2>
             <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
-            <p class="texto"> Familias </p>
+            <b class="texto"> Familias </br>
         </div>
 </body>
 </html>
