--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="cabecalho">
         <ul class="topicos">
             <li class="botao"><a href="#">Home</a></li>
-            <li class="botao"><a href="galeria.html"></a></li>
-            <li class="botao"><a href="explorar.html"></a></li>
+            <li class="botao"><a href="galeria.html">Galeria</a></li>
+            <li class="botao"><a href="explorar.html">Explorar</a></li>
         </ul>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
