--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <div class="cabecalho">
         <ul class="topicos">
-            <li class="botao"><a href="#">Home</a></li>
-            <li class="botao"><a href="galeria.html">Galeria</a></li>
-            <li class="botao"><a href="explorar.html">Explorar</a></li>
+            </li>
+            <li class="botao">
+                <a href="#">Home</a></li>
+            <li class="botao">
+                <a href="galeria.html">Galeria</a></li>
+            <li class="botao">
+                <a href="explorar.html">Explorar</a></li>
         </ul>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
