--- a/galeria.html
+++ b/galeria.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet " href="style.css">
 </head>
 <body>
-    <h1 class="titulo">Galeria de viagens</h1>
+    <h1 class="titulo">Escravidão</h1>
     <div class="primeira-linha">
         <img class="foto" src="./img/52045523540_d3304b3c0f_o.jpg" alt="Lei dos Escravos">
         <img class="foto" src="./img/Escravidão (3).jpg" alt="Escravidão">
