--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escravidão</title>
+    <title>Viagens</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <div class="cabecalho">
         <ul class="topicos">
+            <li class="botao">
+                <a href="#" class="botao-link">Home</a>
             </li>
             <li class="botao">
-                <a href="#">Home</a></li>
+                <a href="galeria.html" class="botao-link">Galeria</a>
+            </li>
             <li class="botao">
-                <a href="galeria.html">Galeria</a></li>
-            <li class="botao">
-                <a href="explorar.html">Explorar</a></li>
+                <a href="explorar.html" class="botao-link">Explorar</a>
         </ul>
   <h1 class="titulo" >Escravidão</h1>  
     </div>
