--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <h1 class="titulo" >Escravidão</h1>  
     </div>
     <div class="texto">
-<h2 class="subtitulo">Um pouco da escravidao</h2>
-<p class="teexto-inicial">É considerado escravidão o regime de trabalho no qual homens e mulheres são considerados propriedades de seus senhores, podendo ser vendidas ou trocadas como mercadorias.
+<h2 class="subtitulo">Um pouco da escravidão</h2>
+<p class="texto-inicial">É considerado escravidão o regime de trabalho no qual homens e mulheres são considerados propriedades de seus senhores, podendo ser vendidas ou trocadas como mercadorias.
 
     As pessoas escravizadas têm suas liberdades tolhidas, além de forçadas a executar tarefas sem receber qualquer tipo de remuneração.
     
