--- a/explorar.html
+++ b/explorar.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escravidão</title>
+    <title>Explorar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">Sobre oque você quer saber sobre a escravidão</h1>
-    <h2 class="subtitulo">Trabalho forçado</h2>
-    <div class="primeiro aprendizado">
-        <img class="foto" src="./img/image copy.png">
-        <p class="texto"> Somos Contra a Escravidão</p>
+    <h1 class="titulo">Sobre a Escravidão</h1>
+    <h2 class="subtitulo">Eles sofreram de mais</h2>
+   
+    <div class="Escravizados">
+        <img class="foto-explorar" src="./img/0243cbf1978673fe443d7558de6ab4f0_XL.jpg alt="Mulheres escravizadas">
+        <p class="texto-descricao">Foto antiga </br>Mulheres tambem foram escravizadas</br> </p>
     </div>
-    <body>
-        <h1 class="titulo">Familias escravizadas</h1>
-        <div class="primeiro aprendizado">
-            <h2 class="subtitulo">Algumas imagens </h2>
-            <img class="foto" src="./img/Casa-de-negros-1024x700.jpg">
-            <img class="foto" src="./pngwing.com.png">
-            <b class="texto"> Familias </br>
-        </div>
+
+    <h2 class="subtitulo">Lei</h2>
+    <div class="destino">
+        <img class="foto-explorar" src="./img/21014917051377.webp alt="Lei escravidão">
+        <p class="texto-descricao">A escravidão tem haver com o racismo</br> e até nos tempo de hoje acontece</p>
+    </div>
+    <h2 class="subtitulo">Homem com sequelas</h2>
+    <div class="destino">
+        <img class="foto-explorar" src="./img/52045523540_d3304b3c0f_o.jpg alt="Chicotadas em um escravos">
+        <p class="texto-descricao">O título de Patrimônio Natural Mundial deve-se </br>Essas são algumas sequelas sobre a escravidão</p>
+    </div>
 </body>
 </html>
