--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
     <div class="primeira-linha">
         <img class="foto" src="./img/52045523540_d3304b3c0f_o.jpg" alt="Lei dos Escravos">
         <img class="foto" src="./img/Escravidão (3).jpg" alt="Escravidão">
-        <img class="foto" src="./img/image copy 2.png"  alt="Negron">
+        <img class="foto" src="./img/image copy 2.png"  alt="Escravo">
     </div>
     <div class="segunda-linha">
         <img class="foto" src="./img/image copy.png" alt="Patrao dos escravos">
