--- a/explorar.html
+++ b/explorar.html
@@ -17,7 +17,7 @@
 
     <h2 class="subtitulo">Lei</h2>
     <div class="destino">
-        <img class="foto-explorar" src="./img/21014917051377.webp alt="Lei escravidão">
+        <img class="foto-explorar" src="./img/21014917051377.webp alt=">"Lei escravidão">
         <p class="texto-descricao">A escravidão tem haver com o racismo</br> e até nos tempo de hoje acontece</p>
     </div>
     <h2 class="subtitulo">Homem com sequelas</h2>
