--- a/explorar.html
+++ b/explorar.html
@@ -11,18 +11,18 @@
     <h2 class="subtitulo">Eles sofreram de mais</h2>
    
     <div class="Escravizados">
-        <img class="foto-explorar" src="./img/0243cbf1978673fe443d7558de6ab4f0_XL.jpg alt="Mulheres escravizadas">
+        <img class="foto-explorar" src="./img/0243cbf1978673fe443d7558de6ab4f0_XL.jpg "alt="Mulheres escravizadas">
         <p class="texto-descricao">Foto antiga </br>Mulheres tambem foram escravizadas</br> </p>
     </div>
 
     <h2 class="subtitulo">Lei</h2>
     <div class="destino">
-        <img class="foto-explorar" src="./img/21014917051377.webp alt=">"Lei escravidão">
+        <img class="foto-explorar" src="./img/21014917051377.webp "alt="Lei escravidão">
         <p class="texto-descricao">A escravidão tem haver com o racismo</br> e até nos tempo de hoje acontece</p>
     </div>
     <h2 class="subtitulo">Homem com sequelas</h2>
     <div class="destino">
-        <img class="foto-explorar" src="./img/52045523540_d3304b3c0f_o.jpg alt="Chicotadas em um escravos">
+        <img class="foto-explorar" src="./img/52045523540_d3304b3c0f_o.jpg "alt="Chicotadas em um escravos">
         <p class="texto-descricao">O título de Patrimônio Natural Mundial deve-se </br>Essas são algumas sequelas sobre a escravidão</p>
     </div>
 </body>
