--- a/explorar.html
+++ b/explorar.html
@@ -23,7 +23,12 @@
     <h2 class="subtitulo">Homem com sequelas</h2>
     <div class="destino">
         <img class="foto-explorar" src="./img/52045523540_d3304b3c0f_o.jpg "alt="Chicotadas em um escravos">
-        <p class="texto-descricao">O título de Patrimônio Natural Mundial deve-se </br>Essas são algumas sequelas sobre a escravidão</p>
+        <p class="texto-descricao"></br>Essas são algumas sequelas sobre a escravidão</p>
+    </div>
+    <h2 class="subtitulo">Casa de negros</h2>
+    <div class="destino">
+        <img class="foto-explorar" src="./img/52045523540_d3304b3c0f_o.jpg "alt="Familia escrava">
+        <p class="texto-descricao"> </br>Familia de escravos brincando</p>
     </div>
 </body>
 </html>
