--- a/galeria.html
+++ b/galeria.html
@@ -15,6 +15,7 @@
     </div>
     <div class="segunda-linha">
         <img class="foto" src="./img/image copy.png" alt="Patrao dos escravos">
+        <img class="foto" src="./img/0243cbf1978673fe443d7558de6ab4f0_XL.jpg" alt="Mulheres escravas">
     </div>
 </body>
 </html>
