--- a/galeria.html
+++ b/galeria.html
@@ -16,6 +16,8 @@
     <div class="segunda-linha">
         <img class="foto" src="./img/image copy.png" alt="Patrao dos escravos">
         <img class="foto" src="./img/0243cbf1978673fe443d7558de6ab4f0_XL.jpg" alt="Mulheres escravas">
+        <img class="foto" src="./img/Casa-de-negros-1024x700.jpg" alt="Sequelas da escravidão">
     </div>
+    
 </body>
 </html>
