--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     Esse tipo de mão de obra foi muito empregada no Brasil, mas também em diversas partes do mundo durante períodos distintos.
     
-    Atualmente, o regime escravista é ilegal, entretanto, ainda existem muitos trabalhadores e trabalhadoras que vivem em condições semelhantes à escravidão, um trabalho forçado em diversas culturas e períodos históricos, teve como consequência a privação da liberdade, a humilhação e a violência contra os escravizados, no brasil a escravidão durou cerca de anos. </p>
+    Atualmente, o regime escravista é ilegal, entretanto, ainda existem muitos trabalhadores e trabalhadoras que vivem em condições semelhantes à escravidão, um trabalho forçado em diversas culturas e períodos históricos, teve como consequência a privação da liberdade, a humilhação e a violência contra os escravizados, no brasil a escravidão durou cerca de anos. com a populaçao africana e indigina sendos obrigados a trabalharem forçados </p>
     <p class="texto-fonte">Fonte: Toda Matematica</p>
     </div>
 </body>
